tests/ui/consts/const-external-macro-const-err.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/auxiliary/external_macro.rs:12:23
   |
LL | macro_rules! static_assert {
   | -------------------------- in this expansion of `static_assert!`
...
LL |         const _: () = [()][!($test) as usize];
   |                       ^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 1 but the index is 1
   |
  ::: $DIR/const-external-macro-const-err.rs:12:5
   |
LL |     static_assert!(2 + 2 == 5);
   |     -------------------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
